--- a/stylesheets/style_blue.css
+++ b/stylesheets/style_blue.css
@@ -14,6 +14,11 @@ html, body {
     -webkit-overflow-scrolling: touch;
 }
 
+dd {
+    margin-inline-start: 5%;
+}
+
+
 .section {
     position: relative;
     padding-top: 15px;
