--- a/stylesheets/style_dark_dark.css
+++ b/stylesheets/style_dark_dark.css
@@ -13,6 +13,10 @@ html, body {
     -ms-text-size-adjust: 100%;
     -webkit-overflow-scrolling: touch;
 }
+dd {
+    margin-inline-start: 5%;
+}
+
 
 .section {
     position: relative;
